Update with Tech Support section

--- a/dev/build-production.html
+++ b/dev/build-production.html
@@ -25,6 +25,7 @@
         </div>
         <div class="footer-nav">
           <div class="left"><a href="../dev/customization.html"><span class="title">Customization</span></a></div>
+          <div class="right"><a href="../dev/tech-support.html"><span class="label">Next: </span><span class="title">Tech Support</span></a></div>
         </div>
       </div>
       <div class="menu toc-menu">
@@ -45,6 +46,8 @@
                   </ul>
                 </li>
               </ul>
+            </li>
+            <li class="menu-item -level-1"><a href="../dev/tech-support.html" class="link title  link-devtech-support">Tech Support</a>
             </li>
           </ul>
         </li>
