--- a/dev/customization.html
+++ b/dev/customization.html
@@ -141,6 +141,8 @@
                 </li>
               </ul>
             </li>
+            <li class="menu-item -level-1"><a href="../dev/tech-support.html" class="link title  link-devtech-support">Tech Support</a>
+            </li>
           </ul>
         </li>
       </div>
