--- a/dev/first-steps.html
+++ b/dev/first-steps.html
@@ -105,6 +105,8 @@ Ctrl+C to shut down
                 </li>
               </ul>
             </li>
+            <li class="menu-item -level-1"><a href="../dev/tech-support.html" class="link title  link-devtech-support">Tech Support</a>
+            </li>
           </ul>
         </li>
       </div>
