--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <blockquote>
 <p>Simple and Elegant personal theme for Ghost.</p>
 </blockquote>
-<p><a href="https://kikobeats.com"><img src="https://i.imgur.com/AtTXdHk.jpg"></a></p>
+<p><a href="https://sellfy.com/p/G5kK"><img src="https://i.imgur.com/AtTXdHk.jpg"></a></p>
 <p><strong>Uno Urban</strong> is a Simple and Elegant personal theme for Ghost.</p>
 <p>You can see a <a href="https://kikobeats.com">demo</a> in my own blog. Also check how <a href="https://kikobeats.com/styleguide">styleguide</a> looks.</p>
 <p>It&apos;s the commercial version of my popular free Ghost theme <a href="https://github.com/Kikobeats/uno-zen">Uno Zen</a>.</p>
@@ -78,6 +78,8 @@
                 <li class="menu-item -level-2"><a href="dev/build-production.html" class="link title  link-devbuild-production">Build Production</a>
                 </li>
               </ul>
+            </li>
+            <li class="menu-item -level-1"><a href="dev/tech-support.html" class="link title  link-devtech-support">Tech Support</a>
             </li>
           </ul>
         </li>
